salesforce/force-app/main/default/objects/RY_Programme__c/fields/Category__c.field-meta.xml
<CustomField><fullName>Category__c</fullName><label>Category</label><length>255</length><required>false</required><type>Text</type></CustomField>