salesforce/force-app/main/default/objects/RY_Programme__c/fields/Credential_Text__c.field-meta.xml
<CustomField><fullName>Credential_Text__c</fullName><label>Credential Text</label><length>255</length><required>false</required><type>Text</type></CustomField>