salesforce/force-app/main/default/objects/RY_Programme__c/fields/Listed_Body__c.field-meta.xml
<CustomField><fullName>Listed_Body__c</fullName><label>Listed Body</label><length>255</length><required>false</required><type>Text</type></CustomField>